kubernetes/development.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: expertlabel-dev
---

# ExpertLabel
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expertlabel
  namespace: expertlabel-dev
spec:
  selector:
    matchLabels:
      app: expertlabel
  template:
    metadata:
      labels:
        app: expertlabel
    spec:
      containers:
        - name: expertlabel
          image: ${CI_REGISTRY}/${CI_REGISTRY_PATH}:expertlabel-${GITHUB_RUN_NUMBER}
          imagePullPolicy: Always
          resources:
            limits:
              memory: "2Gi"
              cpu: "500m"
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: expertlabel-service
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 80
    targetPort: 3000
  selector:
    app: expertlabel
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: expertlabel-ingress
  namespace: expertlabel-dev
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_clear_headers "strict-transport-security";
      more_clear_headers "x-content-type-options";
      more_clear_headers "x-frame-options";
      more_clear_headers "content-security-policy";
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  rules:
    - host: expertlabel.dev.inl.gov
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: expertlabel-service
                port:
                  number: 80
